client/desktop/crates/surf-core-sys/src/lib.rs


unsafe extern "C" {
    pub fn surf_core_config_init(config: *mut surf_core_config_t);
    pub fn surf_core_create(
        config: *const surf_core_config_t,
        out_core: *mut *mut surf_core_t,
    ) -> c_int;
    pub fn surf_core_destroy(core: *mut surf_core_t);
    pub fn surf_core_begin_connection(core: *mut surf_core_t, generation: u64) -> c_int;
    pub fn surf_core_dispatch_scoped(
        core: *mut surf_core_t,
        generation: u64,
        event: *const surf_event_t,
    ) -> c_int;
    pub fn surf_core_dispatch(core: *mut surf_core_t, event: *const surf_event_t) -> c_int;
    pub fn surf_core_snapshot(
        core: *const surf_core_t,
        out_snapshot: *mut surf_snapshot_t,
    ) -> c_int;
    pub fn surf_core_next_effect(core: *mut surf_core_t, out_effect: *mut surf_effect_t) -> c_int;
    pub fn surf_core_connection_generation(core: *const surf_core_t) -> u64;
    pub fn surf_core_stale_event_count(core: *const surf_core_t) -> u64;
    pub fn surf_core_result_string(result: c_int) -> *const c_char;
    pub fn surf_core_abi_version() -> u32;
    pub fn surf_core_sizeof_string_view() -> usize;
    pub fn surf_core_sizeof_config() -> usize;
    pub fn surf_core_sizeof_event() -> usize;
    pub fn surf_core_sizeof_snapshot() -> usize;
    pub fn surf_frame_parse(
        data: *const u8,
        length: usize,
        out_frame: *mut surf_frame_view_t,
    ) -> c_int;
    pub fn surf_frame_result_string(result: c_int) -> *const c_char;
    pub fn surf_frame_sizeof_view() -> usize;
    pub fn surf_reconnect_policy_init(policy: *mut surf_reconnect_policy_t);
    pub fn surf_reconnect_policy_reset(policy: *mut surf_reconnect_policy_t);
    pub fn surf_reconnect_policy_failure(
        policy: *mut surf_reconnect_policy_t,
        retryable: c_int,
        connected_ms: u64,
        out_attempt: *mut u8,
        out_delay_ms: *mut u32,
    ) -> c_int;
    pub fn surf_reconnect_policy_sizeof() -> usize;
    pub fn surf_media_policy_init(policy: *mut surf_media_policy_t);
    pub fn surf_media_policy_reset(policy: *mut surf_media_policy_t);
    pub fn surf_media_policy_admit(
        policy: *mut surf_media_policy_t,
        generation: u32,
        sequence: u32,
        is_idr: c_int,
        out_admission: *mut surf_media_admission_t,
    ) -> c_int;
    pub fn surf_media_policy_sizeof() -> usize;
    pub fn surf_media_admission_sizeof() -> usize;
    pub fn surf_input_state_init(state: *mut surf_input_state_t);
    pub fn surf_input_set_surface(state: *mut surf_input_state_t, generation: u32);
    pub fn surf_input_next_causal(
        state: *mut surf_input_state_t,
        timestamp_ns: u64,
        out_causal: *mut surf_input_causal_t,
    ) -> c_int;
    pub fn surf_input_pointer_sample(
        state: *mut surf_input_state_t,
        local_x: f64,
        local_y: f64,
        surface_width: f64,
        surface_height: f64,
        timestamp_ns: u64,
        out_sample: *mut surf_input_sample_t,
    ) -> c_int;
    pub fn surf_input_wheel_sample(
        state: *mut surf_input_state_t,
        local_x: f64,
        local_y: f64,
        delta_x: f64,
        delta_y: f64,
        surface_width: f64,
        surface_height: f64,
        timestamp_ns: u64,
        out_sample: *mut surf_input_sample_t,
    ) -> c_int;
    pub fn surf_input_state_sizeof() -> usize;
    pub fn surf_input_causal_sizeof() -> usize;
    pub fn surf_input_sample_sizeof() -> usize;
    pub fn surf_clock_sync_init(sync: *mut surf_clock_sync_t);
    pub fn surf_clock_sync_reset(sync: *mut surf_clock_sync_t);
    pub fn surf_clock_sync_probe(
        sync: *mut surf_clock_sync_t,
        now_ns: u64,
        out_client_send_ns: *mut u64,
    ) -> c_int;
    pub fn surf_clock_sync_consume(
        sync: *mut surf_clock_sync_t,
        client_send_ns: u64,
        backend_receive_ns: u64,
        backend_send_ns: u64,
        client_receive_ns: u64,
    ) -> c_int;
    pub fn surf_clock_sync_server_to_client(
        sync: *const surf_clock_sync_t,
        server_ns: u64,
        out_client_ns: *mut u64,
    ) -> c_int;
    pub fn surf_clock_sync_sizeof() -> usize;
    pub fn surf_diagnostics_init(diagnostics: *mut surf_diagnostics_t);
    pub fn surf_diagnostics_reset(diagnostics: *mut surf_diagnostics_t);
    pub fn surf_diagnostics_update(
        diagnostics: *mut surf_diagnostics_t,
        sample: *const surf_diagnostics_sample_t,
        out_report: *mut surf_diagnostics_report_t,
    ) -> c_int;
    pub fn surf_diagnostics_health_string(health: c_int) -> *const c_char;
    pub fn surf_diagnostics_reason_string(reason: c_int) -> *const c_char;
    pub fn surf_diagnostics_sizeof() -> usize;
    pub fn surf_diagnostics_sample_sizeof() -> usize;
    pub fn surf_diagnostics_report_sizeof() -> usize;
}

#[cfg(test)]
mod tests {
    use super::*;
    use std::mem::size_of;

    #[test]
    fn raw_layout_matches_c_compiler() {
        unsafe {
            assert_eq!(surf_core_abi_version(), SURF_CORE_ABI_VERSION);
            assert_eq!(
                surf_core_sizeof_string_view(),
                size_of::<surf_string_view_t>()
            );
            assert_eq!(surf_core_sizeof_config(), size_of::<surf_core_config_t>());
            assert_eq!(surf_core_sizeof_event(), size_of::<surf_event_t>());
            assert_eq!(surf_core_sizeof_snapshot(), size_of::<surf_snapshot_t>());
            assert_eq!(surf_frame_sizeof_view(), size_of::<surf_frame_view_t>());
            assert_eq!(
                surf_reconnect_policy_sizeof(),
                size_of::<surf_reconnect_policy_t>()
            );
            assert_eq!(surf_media_policy_sizeof(), size_of::<surf_media_policy_t>());
            assert_eq!(
                surf_media_admission_sizeof(),
                size_of::<surf_media_admission_t>()
            );
            assert_eq!(surf_input_state_sizeof(), size_of::<surf_input_state_t>());
            assert_eq!(surf_input_causal_sizeof(), size_of::<surf_input_causal_t>());
            assert_eq!(surf_input_sample_sizeof(), size_of::<surf_input_sample_t>());
            assert_eq!(surf_clock_sync_sizeof(), size_of::<surf_clock_sync_t>());
            assert_eq!(surf_diagnostics_sizeof(), size_of::<surf_diagnostics_t>());
            assert_eq!(
                surf_diagnostics_sample_sizeof(),
                size_of::<surf_diagnostics_sample_t>()
            );
            assert_eq!(
                surf_diagnostics_report_sizeof(),
                size_of::<surf_diagnostics_report_t>()
            );
        }
    }
}
